--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ nav ul ul ul li {
 
         a {
             text-decoration: none;
-            color: #333;
+            color: #fff;
 
         }
 
