--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ nav ul ul ul li {
           
           /* Position the image container (needed to position the left and right arrows) */
           .container {
-            position: absolute;
+            position: static;
           }
           
           /* Hide the images by default */
