--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ nav ul ul ul li {
          .slider-container {
             width: 100%;
             overflow: hidden;
-            border: 5px solid white;
+            border: 5px solid #0031a4;
              background-color: #1e50ffb8;
         }
 
