--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ nav ul li {
 
 nav ul li a {
     display: block;
-    padding: 0 25px;
+    padding: 0px 25px 0px 15px;
     color: white;
     text-decoration: none;
     line-height: 60px;
