--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ nav ul ul ul li {
 }
 /* Dropdwn End */
 
-
+/* Slider Start */
 .slider {
     position: relative;
     background-color: #1e90ffb8;
